<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_game_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddGameFragment">

        <EditText
            android:id="@+id/name_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/player_1_name"
            android:autofillHints="@string/player_1_name"
            />

        <EditText
            android:id="@+id/score_one"
            android:layout_width="142dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/name_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/name_one"
            app:layout_constraintTop_toTopOf="@+id/name_one"
            android:hint="@string/player_1_score"
            android:autofillHints="@string/player_1_score"
            />

        <EditText
            android:id="@+id/name_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/name_one"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/name_one"
            app:layout_constraintTop_toBottomOf="@+id/name_one"
            android:hint="@string/player_2_name"
            android:autofillHints="@string/player_2_name" />

        <EditText
            android:id="@+id/score_two"
            android:layout_width="139dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/name_two"
            app:layout_constraintEnd_toEndOf="@+id/score_one"
            app:layout_constraintStart_toStartOf="@+id/score_one"
            app:layout_constraintTop_toTopOf="@+id/name_two"
            android:hint="@string/player_2_score"
            android:autofillHints="@string/player_2_score" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="60dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/save_game_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>